Add barochat website bot to the assignment 3

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
     <meta charset="UTF-8">
@@ -9,18 +10,19 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/221c2c9d5f.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div id="main">
         <header>
             <!-- <div class="flex"> -->
-                <div id="first">
-                    <p id="date"></p>
-                    <div id="dateobj">
-                        <p id="day"></p>
-                        <p id="my"></p>
-                    </div>
+            <div id="first">
+                <p id="date"></p>
+                <div id="dateobj">
+                    <p id="day"></p>
+                    <p id="my"></p>
                 </div>
-                <!-- <div id="dateobj">
+            </div>
+            <!-- <div id="dateobj">
                     <p id="day"></p>
                     <p id="my"></p>
                 </div> -->
@@ -28,11 +30,13 @@
             <div class="container">
                 <div id="places">
                     <p class="text">Select Place</p>
-                    <button onclick="myfunc()" class="dropbtn">All Places &nbsp; &nbsp; <i class="fas fa-caret-down"></i></button>
+                    <button onclick="myfunc()" class="dropbtn">All Places &nbsp; &nbsp; <i
+                            class="fas fa-caret-down"></i></button>
                 </div>
                 <div id="timeline">
                     <p class="text">How Many Days?</p>
-                    <button onclick="myfunc1()" class="dropbtn"> One Week &nbsp; &nbsp; <i class="fas fa-caret-down"></i></button>
+                    <button onclick="myfunc1()" class="dropbtn"> One Week &nbsp; &nbsp; <i
+                            class="fas fa-caret-down"></i></button>
                     <div id="mydropdown" class="dropdowncontent1">
                         <a href="#">One Week</a>
                         <a href="#">Two Week</a>
@@ -51,7 +55,7 @@
                 </div>
                 <div id="gobtn">
                     <button id="in"><i class="fas fa-search"></i> Go</button>
-                </div>            
+                </div>
             </div>
             <div id="weather">
                 <p id="status"><i class='fas fa-sun fa-2x' style='color: #eccc68'></i></p>
@@ -67,5 +71,8 @@
         <div id="container2"></div>
     </div>
     <script src="script.js"></script>
+    <script type="text/javascript" id=""
+        src="https://app.barochat.com/chat-widget/3uKL3eJvdzKP085508678422pmF58LSd.js"></script>
 </body>
+
 </html>
