Updated the script tag

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
         <div id="container2"></div>
     </div>
     <script src="script.js"></script>
-    <script type="text/javascript" id=""
-        src="https://app.barochat.com/chat-widget/3uKL3eJvdzKP085508678422pmF58LSd.js"></script>
+    <script src="https://app.reply.cx/chat-widget/4G4p2yRLwfaS105934638944Mq4uogZN.js" defer></script>
 </body>
 
 </html>
