--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div id="container2"></div>
     </div>
     <script src="script.js"></script>
-    <script src="https://app.reply.cx/chat-widget/4G4p2yRLwfaS105934638944Mq4uogZN.js" defer></script>
+    <script src="https://app.dev.wotnot.io/chat-widget/TqKD5mFHswKE065314249579mcYkxL4E.js" defer></script>
 </body>
 
 </html>
