--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
     <script src="script.js"></script>
     <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' defer></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L79QGQVFDR"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L79QGQVFDR&amp;l=dataLayer&amp;cx=c"></script>
 </body>
 
 </html>
