Update script tag

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <script src="script.js"></script>
     <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' defer></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-L79QGQVFDR&amp;l=dataLayer&amp;cx=c"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MW9ZRN5QDK&amp;l=dataLayer"></script>
 </body>
 
 </html>
