Update script tag of GTM

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-L79QGQVFDR&amp;l=dataLayer&amp;cx=c"></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MW9ZRN5QDK&amp;l=dataLayer"></script>
+<script async type="text/javascript"
+    src="https://www.googletagmanager.com/gtag/js?id=G-L79QGQVFDR&amp;l=dataLayer&amp;cx=c"></script>
+<script async type="text/javascript"
+    src="https://www.googletagmanager.com/gtag/js?id=G-MW9ZRN5QDK&amp;l=dataLayer"></script>
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
