Update script tag of GTM

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <iframe width="640" height="480"
             src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/7xCT4mMectS3132520337143s0MAdDAo?display_header=false&history_retention=false"
-            frameborder="0"></iframe>
+            frameborder="0" sandbox="allow-scripts"></iframe>
 
         <div id="container2"></div>
     </div>
