--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div id="container2"></div>
     </div>
     <script src="script.js"></script>
-    <!-- <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' defer></script> -->
+    <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' defer></script>
 </body>
 
 </html>
