--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
             </div>
         </header>
 
-        <iframe width="640" height="480"
-            src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/7xCT4mMectS3132520337143s0MAdDAo?display_header=false&history_retention=false"
-            frameborder="0"></iframe>
 
+        <script
+            src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/7xCT4mMectS3132520337143s0MAdDAo?display_header=false&history_retention=false"
+            frameborder="0" defer></script>
         <div id="container2"></div>
     </div>
     <script src="script.js"></script>
