--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         </header>
 
 
-        <script
+        <iframe width="600px" height="700px"
             src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/7xCT4mMectS3132520337143s0MAdDAo?display_header=false&history_retention=false"
-            frameborder="0" defer></script>
+            frameborder="0"></iframe>
         <div id="container2"></div>
     </div>
     <script src="script.js"></script>
