--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <title>Assignment3</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/221c2c9d5f.js" crossorigin="anonymous"></script>
-    <script async type="text/javascript"
-        src="https://www.googletagmanager.com/gtag/js?id=G-L79QGQVFDR&amp;l=dataLayer&amp;cx=c"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L79QGQVFDR"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-L79QGQVFDR');
+    </script>
 </head>
 
 <body>
@@ -93,8 +98,6 @@
                     console.log("FROM PARENT", window.location.host, eventData)
                     window.dataLayer = window.dataLayer || [];
                     function gtag() { window.dataLayer.push(arguments); }
-                    gtag('js', new Date());
-                    gtag("config", "G-L79QGQVFDR");
                     gtag("event", "GAStartTrial_SR", {
                         "send_to": "G-L79QGQVFDR"
                     });
