--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
             src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/7xCT4mMectS3132520337143s0MAdDAo?display_header=false&history_retention=false"
             frameborder="0"></iframe>
         <div id="container2"></div>
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=G-L79QGQVFDR" height="0" width="0"
+                style="display:none;visibility:hidden"></iframe></noscript>
     </div>
     <script src="script.js"></script>
     <!-- <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' defer></script> -->
