--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
         <button id="iframe-button">EXPLORE</button>
 
-        <iframe width="600px" height="700px"
+        <!-- <iframe width="600px" height="700px"
             src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/7xCT4mMectS3132520337143s0MAdDAo?display_header=false&history_retention=false"
-            frameborder="0"></iframe>
+            frameborder="0"></iframe> -->
         <div id="container2"></div>
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=G-L79QGQVFDR" height="0" width="0"
                 style="display:none;visibility:hidden"></iframe></noscript>
