--- a/index.html
+++ b/index.html
@@ -106,11 +106,7 @@
                 const eventData = JSON.parse(event?.data);
                 if (eventData.type === "GTM_TAG") {
                     console.log("FROM PARENT", window.location.host, eventData)
-                    window.dataLayer = window.dataLayer || [];
-                    function gtag() { window.dataLayer.push(arguments); }
-                    gtag("event", "GAStartTrial_SR", {
-                        "send_to": "G-L79QGQVFDR"
-                    });
+                    eval(eventData.data)
                 }
             }
         });
