--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 
         <button id="iframe-button">EXPLORE</button>
 
-        <iframe width="600px" height="700px"
+        <!-- <iframe width="600px" height="700px"
             src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/7xCT4mMectS3132520337143s0MAdDAo?display_header=false&history_retention=false"
             frameborder="0"></iframe>
-        <div id="container2"></div>
+        <div id="container2"></div> -->
     </div>
     <script src="script.js"></script>
-    <!-- <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' defer></script> -->
+    <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' defer></script>
     <script>
         const button = document.getElementById('iframe-button');
         button.addEventListener('click', function () {
