update script tag

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         <div id="container2"></div> -->
     </div>
     <script src="script.js"></script>
-    <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' defer></script>
+    <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' initOnPageLoad="false"
+        defer></script>
     <script>
         const button = document.getElementById('iframe-button');
         button.addEventListener('click', function () {
