--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div id="container2"></div> -->
     </div>
     <script src="script.js"></script>
-    <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' initOnPageLoad="false"
+    <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' initOnPageLoad="true"
         defer></script>
     <script>
         const button = document.getElementById('iframe-button');
