--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
         <div id="container2"></div> -->
     </div>
     <script src="script.js"></script>
-    <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' initOnPageLoad="false"
-        defer></script>
+    <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" defer></script>
     <script>
         const button = document.getElementById('iframe-button');
         button.addEventListener('click', function () {
