--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 
         <!-- <iframe width="600px" height="700px"
             src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/7xCT4mMectS3132520337143s0MAdDAo?display_header=false&history_retention=false"
-            frameborder="0"></iframe>
-        <div id="container2"></div> -->
+            frameborder="0"></iframe> -->
+        <div id="container2"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" defer></script>
-    <script>
+   <script>
         const button = document.getElementById('iframe-button');
         button.addEventListener('click', function () {
             window.dataLayer = window.dataLayer || [];
