--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         </header>
 
         <button id="iframe-button">EXPLORE</button>
+        <div id="root"></div>
 
         <!-- <iframe width="600px" height="700px"
             src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/7xCT4mMectS3132520337143s0MAdDAo?display_header=false&history_retention=false"
@@ -82,7 +83,7 @@
         <div id="container2"></div>
     </div>
     <script src="script.js" defer></script>
-    <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" defer></script>
+    <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" widget-container-id="root" defer></script>
    <script>
         const button = document.getElementById('iframe-button');
         button.addEventListener('click', function () {
