--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div id="container2"></div>
     </div>
     <script src="script.js" defer></script>
-    <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" widget-container-id="root" defer></script>
+    <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" widget-container-id="root" widget-height="500px" widget-width="600px" defer></script>
    <script>
         const button = document.getElementById('iframe-button');
         button.addEventListener('click', function () {
