--- a/index.html
+++ b/index.html
@@ -77,13 +77,11 @@
         <button id="iframe-button">EXPLORE</button>
         <div id="root"></div>
 
-        <!-- <iframe width="600px" height="700px"
-            src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/7xCT4mMectS3132520337143s0MAdDAo?display_header=false&history_retention=false"
-            frameborder="0"></iframe> -->
+        <iframe width="640" height="480" src="https://embed.wotnot.io/7vKkhRXPreMT072624217092nmHwpF9u/bot/7oojX4w9fXEd072624631987EToW3tx7?display_header=false&history_retention=false" frameborder="0"></iframe>
         <div id="container2"></div>
     </div>
     <script src="script.js" defer></script>
-    <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" widget-container-id="root" widget-height="500px" widget-width="600px" defer></script>
+    <!-- <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" widget-container-id="root" widget-height="500px" widget-width="600px" defer></script> -->
     <!-- <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" defer></script> -->
    <script defer>
         const button = document.getElementById('iframe-button');
