--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <button id="iframe-button">EXPLORE</button>
         <div id="root"></div>
-
+        <div id="container2"></div>
     </div>
     <script src="script.js" defer></script>
     <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" widget-container-id="root" widget-height="500px" widget-width="600px" defer></script>
