update script tag

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <script src="https://kit.fontawesome.com/221c2c9d5f.js" crossorigin="anonymous"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-L79QGQVFDR"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-L79QGQVFDR');
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-L79QGQVFDR');
     </script>
 </head>
 
@@ -75,13 +75,14 @@
         </header>
 
         <button id="iframe-button">EXPLORE</button>
-        <div id="root"></div>
+        <div id="root" style="height: 500px; width: 600px;"></div>
         <div id="container2"></div>
     </div>
     <script src="script.js" defer></script>
-    <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" widget-container-id="root" widget-height="500px" widget-width="600px" defer></script>
+    <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" widget-container-id="root"
+        widget-height="500px" widget-width="600px" defer></script>
     <!-- <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" defer></script> -->
-   <script defer>
+    <script defer>
         const button = document.getElementById('iframe-button');
         button.addEventListener('click', function () {
             window.dataLayer = window.dataLayer || [];
