--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         </header>
 
         <button id="iframe-button">EXPLORE</button>
-        <div id="root" style="height: 500px; width: 600px;"></div>
+        <div id="root"
+            style="height: 500px; width: 600px; box-shadow: 0 3px 6px 0 rgba(0,0,0,0.16); background-color: #ffffff; display: block;">
+        </div>
         <div id="container2"></div>
     </div>
     <script src="script.js" defer></script>
