--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
     <script src="script.js" defer></script>
     <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" widget-container-id="root"
-        widget-height="500px" widget-width="600px" defer></script>
+        defer></script>
     <!-- <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" defer></script> -->
     <script defer>
         const button = document.getElementById('iframe-button');
