--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             // gtag("event", "GAStartTrial_SR", {
             //     "send_to": "G-L79QGQVFDR"
             // });
+            window.WTNT.initChatWidget()
             window.wn.showBot()
         });
         window.addEventListener('message', function (event) {
