--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Assignment3</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/221c2c9d5f.js" crossorigin="anonymous"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L79QGQVFDR"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-L79QGQVFDR"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
         gtag('config', 'G-L79QGQVFDR');
-    </script>
+    </script> -->
 </head>
 
 <body>
@@ -78,9 +78,7 @@
         <div id="container2"></div>
     </div>
     <script src="script.js" defer></script>
-    <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" defer
-        initOnPageLoad="false"></script>
-    <!-- <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" defer></script> -->
+    <script src="https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js" defer></script>
     <script defer>
         const button = document.getElementById('iframe-button');
         button.addEventListener('click', function () {
