--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Assignment3</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/221c2c9d5f.js" crossorigin="anonymous"></script>
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-L79QGQVFDR"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L79QGQVFDR"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
         gtag('config', 'G-L79QGQVFDR');
-    </script> -->
+    </script>
 </head>
 
 <body>
@@ -82,15 +82,11 @@
     <script defer>
         const button = document.getElementById('iframe-button');
         button.addEventListener('click', function () {
-            // window.dataLayer = window.dataLayer || [];
-            // function gtag() { window.dataLayer.push(arguments); }
-            // gtag("event", "GAStartTrial_SR", {
-            //     "send_to": "G-L79QGQVFDR"
-            // });
-            window.WTNT.initChatWidget()
-            setTimeout(() => {
-                window.wn.open()
-            }, 1000)
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { window.dataLayer.push(arguments); }
+            gtag("event", "Mahek Chaniyara", {
+                "send_to": "G-L79QGQVFDR"
+            });
         });
         window.addEventListener('message', function (event) {
             const isValidJson = (text) => {
