--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-L79QGQVFDR');
+        gtag('config', 'G-MW9ZRN5QDK');
     </script>
 </head>
 
@@ -85,7 +85,7 @@
             window.dataLayer = window.dataLayer || [];
             function gtag() { window.dataLayer.push(arguments); }
             gtag("event", "Mahek Chaniyara", {
-                "send_to": "G-L79QGQVFDR"
+                "send_to": "G-MW9ZRN5QDK"
             });
         });
         window.addEventListener('message', function (event) {
