--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         button.addEventListener('click', function () {
             window.dataLayer = window.dataLayer || [];
             function gtag() { window.dataLayer.push(arguments); }
-            gtag("event", "Mahek Chaniyara", {
+            gtag("event", "Shaan", {
                 "send_to": "G-MW9ZRN5QDK"
             });
         });
