--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             // gtag("event", "Shaan", {
             //     "send_to": "G-MW9ZRN5QDK"
             // });
-            window.wn.openWindow();
+            window.wn.openWidget();
         });
         window.addEventListener('message', function (event) {
             const isValidJson = (text) => {
