--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
         <div id="container2"></div>
     </div>
     <script src="script.js" defer></script>
-    <script src="https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js" hideBotOnLoad="true"
-        defer></script>
+    <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" defer></script>
     <script defer>
         const button = document.getElementById('iframe-button');
         button.addEventListener('click', function () {
