update bot in website

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Assignment3</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/221c2c9d5f.js" crossorigin="anonymous"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MW9ZRN5QDK"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-MW9ZRN5QDK"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
         gtag('config', 'G-MW9ZRN5QDK');
-    </script>
+    </script> -->
 </head>
 
 <body>
@@ -77,8 +77,11 @@
         <button id="iframe-button">EXPLORE</button>
         <div id="container2"></div>
     </div>
+    <iframe width="640" height="480"
+        src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/4x77VJYgjkik1042084993757vReHiEL?display_header=false&history_retention=false"
+        frameborder="0"></iframe>
     <script src="script.js" defer></script>
-    <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" defer></script>
+    <!-- <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" defer></script> -->
     <script defer>
         const button = document.getElementById('iframe-button');
         button.addEventListener('click', function () {
