update bot in website

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
         </header>
 
         <button id="iframe-button">EXPLORE</button>
+        <iframe width="640" height="480"
+            src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/4x77VJYgjkik1042084993757vReHiEL?display_header=true&history_retention=false"
+            frameborder="0"></iframe>
         <div id="container2"></div>
     </div>
-    <iframe width="640" height="480"
-        src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/4x77VJYgjkik1042084993757vReHiEL?display_header=false&history_retention=false"
-        frameborder="0"></iframe>
     <script src="script.js" defer></script>
     <!-- <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" defer></script> -->
     <script defer>
