--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <title>Assignment3</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/221c2c9d5f.js" crossorigin="anonymous"></script>
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-MW9ZRN5QDK"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L79QGQVFDR"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-MW9ZRN5QDK');
-    </script> -->
+        gtag('config', 'G-L79QGQVFDR');
+    </script>
 </head>
 
 <body>
