--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/221c2c9d5f.js" crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
-    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','G-L79QGQVFDR');
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L79QGQVFDR"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-L79QGQVFDR');
+    </script>
 </head>
 
 <body>
