update bot in website

--- a/index.html
+++ b/index.html
@@ -76,13 +76,14 @@
         </header>
 
         <button id="iframe-button">EXPLORE</button>
-        <iframe width="640" height="480"
+        <!-- <iframe width="640" height="480"
             src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/4x77VJYgjkik1042084993757vReHiEL?display_header=true&history_retention=false"
-            frameborder="0"></iframe>
+            frameborder="0"></iframe> -->
         <div id="container2"></div>
     </div>
     <script src="script.js" defer></script>
-    <!-- <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" defer></script> -->
+    <script src='https://app.dev.wotnot.io/chat-widget/ZLSS34AV63QR135844052724LKMotLtn.js' data-initOnPageLoad="false"
+        defer></script>
     <script defer>
         const button = document.getElementById('iframe-button');
         button.addEventListener('click', function () {
