--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
         <div id="container2"></div>
     </div>
     <script src="script.js" defer></script>
-    <script src='https://app.dev.wotnot.io/chat-widget/ZLSS34AV63QR135844052724LKMotLtn.js' data-initOnPageLoad="false"
+    <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" data-initOnPageLoad="false"
         defer></script>
+
     <script defer>
         const button = document.getElementById('iframe-button');
         button.addEventListener('click', function () {
