update bot in website

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
     <script src="script.js" defer></script>
     <script src="https://app.wotnot.io/chat-widget/7vKkhRXPreMT072624217092nmHwpF9u.js" data-initOnPageLoad="false"
-        defer></script>
+        data-session-payload='{}' defer></script>
 
     <script defer>
         const button = document.getElementById('iframe-button');
