update bot in website

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-L79QGQVFDR');
+        gtag('config', 'G-L79QGQVFDR', { 'debug_mode': true });
     </script>
 </head>
 
