--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
         </header>
 
         <button id="iframe-button">EXPLORE</button>
-        <iframe width="640" height="480"
+        <!-- <iframe width="640" height="480"
             src="https://embed.dev.wotnot.io/7MkVBzx7pD46100623816959lsymJNpl/bot/4x77VJYgjkik1042084993757vReHiEL?display_header=true&history_retention=false"
-            frameborder="0"></iframe>
+            frameborder="0"></iframe> -->
+        <script src='https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js' defer></script>
         <div id="container2"></div>
     </div>
     <script src="script.js" defer></script>
