--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
             // gtag("event", "Shaan", {
             //     "send_to": "G-MW9ZRN5QDK"
             // });
-            window.wn.showWidget(true);
+            // window.wn.showWidget(true);
+            launchWhatsAppSignup()
         });
         window.addEventListener('message', function (event) {
             const isValidJson = (text) => {
@@ -110,6 +111,75 @@
                 }
             }
         });
+        window.fbAsyncInit = function () {
+            // JavaScript SDK configuration and setup
+            FB.init({
+                appId: 810499287217251, // Facebook App ID
+                cookie: true, // enable cookies
+                xfbml: true, // parse social plugins on this page
+                version: 'v19.0' //Graph API version
+            });
+        };
+
+        // Load the JavaScript SDK asynchronously
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+
+        // Facebook Login with JavaScript SDK
+        function launchWhatsAppSignup() {
+            // Conversion tracking code
+            // fbq && fbq('trackCustom', 'WhatsAppOnboardingStart', {appId: 354319837116019, feature: 'whatsapp_embedded_signup'});
+
+            // Launch Facebook login
+            FB.login(function (response) {
+                console.log(response);
+                if (response.authResponse) {
+                    const code = response.authResponse.code;
+                    // The returned code must be transmitted to your backend, 
+                    // which will perform a server-to-server call from there to our servers for an access token
+                } else {
+                    console.log('User cancelled login or did not fully authorize.');
+                }
+            }, {
+                config_id: '401338316142778', // configuration ID goes here
+                response_type: 'code',    // must be set to 'code' for System User access token
+                override_default_response_type: true, // when true, any response types passed in the "response_type" will take precedence over the default types
+                extras: {
+                    setup: {
+                        business: {
+                            name: 'Acme Inc.',
+                            email: 'johndoe@acme.com',
+                            phone: {
+                                code: 1,
+                                number: '6505551234'
+                            },
+                            website: 'https://www.acme.com',
+                            address: {
+                                streetAddress1: '1 Acme Way',
+                                city: 'Acme Town',
+                                state: 'CA',
+                                zipPostal: '94000',
+                                country: 'US'
+                            },
+                            timezone: 'UTC-08:00'
+                        },
+                        phone: {
+                            displayName: 'Acme Inc.',
+                            category: 'ENTERTAIN',
+                            description: 'Gears and widgets'
+                        },
+                        preVerifiedPhone: {
+                            ids: ['106540352242922', '105954558954427']
+                        }
+                    }
+                }
+            });
+        }
     </script>
 </body>
 
