Add facebook login button

--- a/index.html
+++ b/index.html
@@ -96,20 +96,39 @@
             launchWhatsAppSignup()
         });
         window.addEventListener('message', function (event) {
-            const isValidJson = (text) => {
-                try {
-                    JSON.parse(text);
-                    return true;
-                } catch (e) {
-                    return false;
+            if (event.origin !== "https://www.facebook.com") return;
+            try {
+                const data = JSON.parse(event.data);
+                if (data.type === 'WA_EMBEDDED_SIGNUP') {
+                    // if user finishes the Embedded Signup flow
+                    if (data.event === 'FINISH') {
+                        const { phone_number_id, waba_id } = data.data;
+                        console.log(phone_number_id, waba_id, "phone_number_id, waba_id")
+                    }
+                    // if user cancels the Embedded Signup flow
+                    else {
+                        const { current_step } = data.data;
+                        console.log("USER STOPPED HERE", current_step)
+                    }
                 }
+            } catch {
+                // Don’t parse info that’s not a JSON
+                console.log('Non JSON Response', event.data);
             }
-            if (event?.data && isValidJson(event?.data)) {
-                const eventData = JSON.parse(event?.data);
-                if (eventData.type === "WN_CUSTOM_GA_EVENT") {
-                    eval(eventData.data)
-                }
-            }
+            // const isValidJson = (text) => {
+            //     try {
+            //         JSON.parse(text);
+            //         return true;
+            //     } catch (e) {
+            //         return false;
+            //     }
+            // }
+            // if (event?.data && isValidJson(event?.data)) {
+            //     const eventData = JSON.parse(event?.data);
+            //     if (eventData.type === "WN_CUSTOM_GA_EVENT") {
+            //         eval(eventData.data)
+            //     }
+            // }
         });
         window.fbAsyncInit = function () {
             // JavaScript SDK configuration and setup
