--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                 response_type: 'code',    // must be set to 'code' for System User access token
                 override_default_response_type: true, // when true, any response types passed in the "response_type" will take precedence over the default types
                 extras: {
+                    "sessionInfoVersion": 2,  //  Receive Session Logging Info
                     // setup: {
                     //     business: {
                     //         name: 'Acme Inc.',
