Add facebook login button

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                 override_default_response_type: true, // when true, any response types passed in the "response_type" will take precedence over the default types
                 extras: {
                     "sessionInfoVersion": 2,  //  Receive Session Logging Info
+                    featureType: "PHONE_NUMBER_SETUP"
                 }
             });
         }
