--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             frameborder="0"></iframe> -->
         <div id="root" style="width: 500px;height: 600px;"></div>
         <script src="https://app.dev.wotnot.io/chat-widget/7MkVBzx7pD46100623816959lsymJNpl.js"
-            data-embed-metadata='{"bot_publish_key":"3QgxdBi5Znou062016936329JwX6zovZ","display_header":"true","history_retention":"false"}'>
+            data-embed-metadata='{"bot_publish_key":"3QgxdBi5Znou062016936329JwX6zovZ","display_header":false,"history_retention":false}'>
             </script>
         <div id="container2"></div>
     </div>
